// Vitest Snapshot v1

exports[`ForgotPasswordView > should render and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class="bg-white shadow rounded w-full p-10"
    >
      <h1
        aria-label="Forgot Password"
        aria-level="1"
        class="text-2xl font-extrabold leading-6 text-gray-800"
      >
        Forgot Password
      </h1>
      <p
        class="text-sm mt-4 font-medium leading-none text-gray-500"
      >
        Enter your email address below and we'll send you a link to reset your password.
      </p>
      <div
        class="grid gap-y-4 mt-4"
      >
        <div>
          <div
            class="relative flex align-middle"
          >
            <label
              class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
              for="email"
            >
              Email
              <input
                aria-label="Email"
                class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                id="email"
                name="email"
                placeholder="Enter your email"
                type="email"
              />
            </label>
          </div>
        </div>
        <a
          aria-label="Back to login"
          class="text-sm font-medium leading-none underline text-gray-800 cursor-pointer"
          href="/login"
        >
          Back to login
        </a>
        <button
          aria-label="Reset Password"
          class="text-sm font-semibold leading-none text-white focus:outline-none py-4 w-full mt-2 bg-indigo-700 border rounded hover:bg-indigo-600  focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700"
          type="submit"
        >
          Reset Password
        </button>
      </div>
    </div>
    ;
  </div>
</DocumentFragment>
`;

exports[`ForgotPasswordView > should render errors and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class="bg-white shadow rounded w-full p-10"
    >
      <h1
        aria-label="Forgot Password"
        aria-level="1"
        class="text-2xl font-extrabold leading-6 text-gray-800"
      >
        Forgot Password
      </h1>
      <p
        class="text-sm mt-4 font-medium leading-none text-gray-500"
      >
        Enter your email address below and we'll send you a link to reset your password.
      </p>
      <div
        class="grid gap-y-4 mt-4"
      >
        <div>
          <div
            class="relative flex align-middle"
          >
            <label
              class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
              for="email"
            >
              Email
              <input
                aria-label="Email"
                class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                id="email"
                name="email"
                placeholder="Enter your email"
                type="email"
              />
            </label>
          </div>
          <ul
            class="mt-1"
          >
            <li>
              <small
                class="text-red-500"
              >
                Please enter your email
              </small>
            </li>
          </ul>
        </div>
        <a
          aria-label="Back to login"
          class="text-sm font-medium leading-none underline text-gray-800 cursor-pointer"
          href="/login"
        >
          Back to login
        </a>
        <ul>
          <li
            class="mt-1"
          >
            <small
              class="text-red-500"
            >
              Something went wrong
            </small>
          </li>
          <li
            class="mt-1"
          >
            <small
              class="text-red-500"
            >
              Please try again
            </small>
          </li>
        </ul>
        <button
          aria-label="Reset Password"
          class="text-sm font-semibold leading-none text-white focus:outline-none py-4 w-full mt-2 bg-indigo-700 border rounded hover:bg-indigo-600  focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700"
          type="submit"
        >
          Reset Password
        </button>
      </div>
    </div>
    ;
  </div>
</DocumentFragment>
`;
